--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -13,5 +13,7 @@
   "invalidAddress": "Dirección inválida",
   "unableToConnect": "No se puede conectar",
   "publicKeyHint": "npub1...",
-  "privateKeyHint": "nsec1..."
+  "privateKeyHint": "nsec1...",
+  "newToNostr": "¿Nuevo en Nostr?",
+  "getStarted": "Comenzar"
 }
